################################################################################
# License: The Unlicense (https://unlicense.org)
################################################################################

add_library(symbolic)
target_include_directories(symbolic PUBLIC include)
#target_link_libraries(symbolic PUBLIC )
#target_sources(symbolic PRIVATE PUBLIC )

# TODO: Create unit tests